# nba-draft-utils

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/grp_krml_group6/: __init__.py
src/grp_krml_group6/data/: sets.py
tests/: test_grp_krml_group6.py
tests/data/: test_sets.py
